# tic-tac-toe-ai

./: CMakeLists.txt  README.md  main.cpp  play.sh  test.sh
include/: ai_player.hpp  tictactoe.hpp
src/: ai_player.cpp  tictactoe.cpp
tests/: CMakeLists.txt  test_ai_player.cpp  test_tictactoe.cpp
